fixes issue causing events to be rendered on wrong line, screwing up the whole timetable + fixes text align to be in center, which it wasn't before

--- a/app/styles/plugin.sass
+++ b/app/styles/plugin.sass
@@ -62,7 +62,6 @@ $timetable-background-color: white !default
  * ==========================================================================
 
 .timetable
-	text-align: center
 	display: flex
 	align-items: stretch
 	width: 100%
@@ -194,7 +193,7 @@ $timetable-background-color: white !default
 		transition: 200ms background-color
 		height: $timetable-hour-row-height - 1px
 		display: block
-		position: relative
+		position: absolute
 		z-index: 2
 		padding: 0 $timetable-entry-padding
 		white-space: normal
